src/TestFiles/ASTTests/SemanticErrorsTests/tests/test1.c
int main() {

    const int x = 25;
    x = 25;
    x = -6532;

    return 0;

}
